# spz_gatekeeper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-zh.md  README.md  RELEASE_CHECKLIST.md  codebubby.md  codebuddy_wasm.md  spz_gatekeeper.js
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml  static.yml  sync-gh-pages.yml
build-wsl/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  adobe_extension_test  audit_summary_test  cmake_install.cmake  compat_check_test  compile_commands.json  extension_integration_test  extension_spec_registry_test  extension_validator_test  gen_fixture_test  registry_cli_test  sh_quantization_test  spz_gatekeeper  spz_gatekeeper-1.0.0  spz_gatekeeper_test  tlv_multi_record_test  validator_registry_test
build-wsl/Testing/Temporary/: CTestCostData.txt
cpp/: CMakeLists.txt
cpp/extensions/adobe/: safe_orbit_camera_validator.h
cpp/extensions/registry/: validator_registry.h
cpp/include/spz_gatekeeper/: audit_summary.h  extension_spec_registry.h  extension_validator.h  json_min.h  report.h  safe_orbit_camera_validator.h  spz.h  tlv.h  validator_registry.h
cpp/src/: audit_summary.cc  extension_spec_registry.cc  json_min.cc  main.cc  report.cc  spz.cc  tlv.cc  wasm_main.cc
cpp/tests/: adobe_extension_test.cc  audit_summary_test.cc  compat_check_test.cc  extension_integration_test.cc  extension_spec_registry_test.cc  extension_validator_test.cc  gen_fixture_test.cc  performance_benchmark_test.cc  registry_cli_test.cc  sh_quantization_test.cc  spz_gatekeeper_test.cc  test_fixtures.h  tlv_multi_record_test.cc  validator_registry_test.cc
docs/: Adobe_Safe_Orbit_Camera_Spec.md  Implementing_Custom_Extension.md  Vendor_ID_Allocation.md  WIKI.md  extension_registry.json
docs/plans/: 2026-03-20-spz-extension-registry-and-selftest-design.md  2026-03-20-spz-extension-registry-implementation-plan.md  2026-03-22-spz-gatekeeper-wasm-audit-implementation-plan.md  2026-03-22-spz-gatekeeper-wasm-audit-modes-design.md  2026-03-23-spz-gatekeeper-v2-hybrid-implementation-plan.md  2026-03-25-spz-gatekeeper-v2-gap-audit.md
tests/: wasm_smoke_test.mjs
web/: index.html  spz_gatekeeper.js
